tests/script_runtime_errors/non_arr_access2/error.txt
Error: 
    2 | event.snot[k]
      |            ^ Conflicting types, got integer but expected array